[package]
name = "hotcloud"
version = "0.1.0"
authors = ["Zachary Tong <zacharyjtong@gmail.com>"]

[dependencies]
rustc-serialize = "*"
env_logger = "*"
log = "*"
toml = "0.1.22"
rand = "0.3"
reqwest = "*"
threadpool = "0.1"
time = "0.1"
chrono = "*"
hyper = "0.11.2"

# serde = "*"
# serde_json = "*"
# serde_macros = "*"
